# nyse-trading

./: .gitignore  .pre-commit-config.yaml  Lesson_Learn.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: data_sources.yaml  deployment_ladder.yaml  falsification_triggers.yaml  gates.yaml  gates_v2.yaml  gics_sectors_sp500.csv  market_params.yaml  puppeteer.config.js  sp500_current.csv  strategy_params.yaml
docs/: ABANDONMENT_CRITERIA.md  AI_GOVERNANCE.md  ATTRIBUTION_METHODOLOGY.md  AUDIT_TRAIL.md  CALIBRATION_TRACKER.md  CAPACITY_AND_LIQUIDITY.md  DATA_DICTIONARY.md  DDQ_AIMA_2025.md  DISASTER_RECOVERY.md  EXECUTIVE_SUMMARY_NONQUANT.md  FRAMEWORK_AND_PIPELINE.md  GOVERNANCE_LOG.md  INDEPENDENT_VALIDATION_DRAFT.md  MLOPS_LIFECYCLE.md  MODEL_VALIDATION.md  NYSE_ALPHA_ONE_PAGER.md  NYSE_ALPHA_RESEARCH_RECORD.md  NYSE_ALPHA_TECHNICAL_BRIEF.md  ODD_PACKAGE.md  OUTCOME_VS_FORECAST.md  QUARTERLY_LETTER_TEMPLATE.md  RALPH_LOOP_RESEARCH_WAVES.md  RALPH_LOOP_TASK.md  REPRODUCIBILITY.md  RESEARCH_RECORD_INTEGRITY.md  REVIEW_CHECKLIST.md  RISK_LIMITS.md  RISK_REGISTER.md  SEC_FINRA_COMPLIANCE.md  STRESS_TEST_FRAMEWORK.md  TODOS.md  backtest_metrics.json
docs/audit/: gate_calibration_audit.md  gate_mismatch_root_cause_and_consequences.md  iter14_correlations_note.md  iter14_coverage_summary.md  iter14_near_miss_table.md  iter14_sector_residual_note.md  iter14_sign_flip_note.md  iter15_v2_gate_family_preregistration.md  wave6_exploratory_2026-04-26.md  wave9d_iter34_gl0025_external_anchor.md  wave_d_diagnostic_charter.md
docs/templates/: ATTRIBUTION_REPORT.md  ATTRIBUTION_REPORT.schema.json  POST_TRADE_ATTESTATION.md  PRE_TRADE_ATTESTATION.md  factor_screen_memo.md
docs/vendors/: EDGAR.md  FINRA.md  finmind.md
results/: reproduction_manifest.txt  research_log.jsonl
results/investigations/: ivol_regime_2026-04-18.json
scripts/: append_research_log.py  check_holdout_guard.py  download_data.py  evaluate_gates.py  fetch_gics_sectors.py  generate_figures.py  generate_outcome_tracker.py  make_research_pack.py  regen_framework_pdf.sh  reproduce.sh  rescreen_v2_active_factors.py  run_backtest.py  run_dashboard.py  run_holdout_once.py  run_holdout_once_long_short.py  run_iter14_diagnostic_battery.py  run_iter18_high52w_diagnostic.py  run_live_trade.py  run_paper_trade.py  run_permutation_test.py  run_robustness_suite.py  run_v1_romano_wolf.py  run_v2_bootstrap_ci.py  run_workstream_a_orthogonal_screen.py  run_workstream_d_single_factor.py  screen_factor.py  simulate_ensemble_g0.py  simulate_v2_ensemble_phase3.py  validate_data.py  verify_research_log.py
src/nyse_ats/: __init__.py  config_loader.py  pipeline.py
src/nyse_core/: __init__.py  allocator.py  attribution.py  backtest.py  benchmark_construction.py  benchmark_metrics.py  config_schema.py  contracts.py  corporate_actions.py  cost_model.py  cv.py  drift.py  factor_correlation.py  factor_screening.py  gates.py  impute.py  metrics.py  normalize.py  optimizer.py  pit.py  portfolio.py  research_pipeline.py  risk.py  schema.py  sector_map_loader.py  signal_combination.py  statistics.py  strategy_registry.py  synthetic_calibration.py  universe.py
tests/: conftest.py
tests/fixtures/: __init__.py  synthetic_constituency.py  synthetic_corporate_actions.py  synthetic_fundamentals.py  synthetic_prices.py  synthetic_short_interest.py  synthetic_transcripts.py
tests/integration/: test_backtest_reconciliation.py  test_data_adapter_flow.py  test_data_quality_ci.py  test_execution_flow.py  test_factor_research_flow.py  test_make_research_pack.py  test_model_comparison.py  test_monitoring_integration.py  test_optimizer_integration.py  test_pipeline_e2e.py  test_pipeline_empty_path.py  test_pipeline_error_path.py  test_pipeline_nil_path.py  test_research_log_chain.py  test_research_pipeline.py  test_storage_lifecycle.py  test_strict_backtest.py  (+1 more)
tests/unit/: test_cv.py  (+62 more)
(+116 files in other folders)
