[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyse-trading"
version = "0.1.0"
description = "NYSE cross-sectional equity factor ATS framework"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1,<3",
    "numpy>=1.26,<2",
    "scipy>=1.12,<2",
    "scikit-learn>=1.4,<2",
    "duckdb>=0.10,<2",
    "pyyaml>=6.0,<7",
    "pydantic>=2.5,<3",
    "tenacity>=8.2,<10",
    "FinMind>=1.5",
    "edgartools>=2.0",
    "streamlit>=1.30,<2",
    "plotly>=5.18,<7",
]

[project.optional-dependencies]
execution = [
    "nautilus_trader>=1.190",
]
research = [
    "vectorbt>=0.26",
    "hypothesis>=6.90",
]
ml = [
    "torch>=2.1",
    "lightgbm>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.90",
    "mypy>=1.8",
    "ruff>=0.2",
    "pandas-stubs>=2.1",
    "types-requests>=2.31",
    "types-PyYAML>=6.0",
    "pre-commit>=3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nyse_core", "src/nyse_ats"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "property: marks property-based tests",
]

[tool.mypy]
# Strict mypy is an aspirational target tracked in TODO-31.
# Current baseline: explicit-package-bases + missing-imports tolerant,
# because pandas/requests/yaml/plotly stubs are either unavailable or
# their transitive type coverage regresses faster than we can patch.
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
check_untyped_defs = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["nyse_core.contracts", "nyse_core.schema", "nyse_core.config_schema"]
disallow_untyped_defs = true
warn_return_any = true

# Optional-dep ML models: torch/lightgbm are imported lazily; typed-as-object
# is intentional to let the module import without the extras installed.
[[tool.mypy.overrides]]
module = [
    "nyse_core.models.neural_model",
    "nyse_core.models.gbm_model",
    "nyse_core.research_pipeline",
    "nyse_core.synthetic_calibration",
    "nyse_ats.data.edgar_adapter",
]
ignore_errors = true

# pandas-stubs 3.0 returns wide-union types (e.g. Series.iloc[0] -> str | bytes
# | date | ... | floating) that surface at call sites as [index], [arg-type],
# and [operator] errors even though the runtime values are numeric. These
# modules do heavy pandas arithmetic; disabling only the stub-noise codes keeps
# every other typing check strict. Tracked under TODO-31 (aspirational full
# strict typing) — fix incrementally via cast() / .item() narrowing.
[[tool.mypy.overrides]]
module = [
    "nyse_ats.monitoring.data_quality",
    "nyse_ats.monitoring.drift_monitor",
    "nyse_ats.pipeline",
    "nyse_core.drift",
    "nyse_core.factor_correlation",
    "nyse_core.factor_screening",
    "nyse_core.features.earnings",
    "nyse_core.features.nlp_earnings",
    "nyse_core.features.price_volume",
    "nyse_core.features.sentiment",
    "nyse_core.features.short_interest",
    "nyse_core.metrics",
    "nyse_core.statistics",
]
disable_error_code = [
    "index",
    "arg-type",
    "operator",
    "var-annotated",
    "union-attr",
    "list-item",
    "assignment",
]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
# ML/stats code uses uppercase X, y, N, R conventions extensively.
# N801/N802 hits on legacy enum/class names we keep for compatibility.
# SIM117 collapsing nested `with` blocks hurts readability in fixture setup.
ignore = ["N803", "N806", "N801", "N802", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401", "E501"]
